<resources>
    <string name="app_name">NostrPostr</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="title_search">Search</string>
    <string name="title_post">Post</string>
    <string name="has_private_key">has private key</string>
</resources>